fix: 临时修复 processDetails 返回失败的问题
